Add WIP and post layout update

--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@ layout: default
       </p>
       <h2 id="extras" class="hr"><span class="hr">PROJECTS</span></h2>
       <ul class="horizontal">
-        <li><a href="http://www.twitter.com/nicklmitch" class="twitter-bg"><i class="fa fa-twitter"></i></a>
-        </li>
-        <li><a href="http://www.github.com/nimi" class="github-bg"><i class="fa fa-github"></i></a>
-        </li>
-        <li><a href="mailto:mitchellnicholasl@gmail.com" class="email-bg"><i class="fa fa-envelope"></i></a>
-        </li>
-        <li><a href="http://www.linkedin.com/in/nicholaslmitchell" class="linkedin-bg"><i class="fa fa-linkedin"></i></a>
-        </li>
+        <li><strong>Sherwin-Williams Color Visualizer</strong> - Large single page Angular application for exploring and previewing paint colors</li>
+        <li><strong>Everyday Mathematics</strong> - Large Single page Backbone web application for grade-school students learning math</li>
+        <li><strong>GT Universe</strong> - Marketing website for a small Chicago marketing firm.</li>
+        <li><strong>Terra Pave</strong> - Website for a company disrupting toxic asphault industry</li>
+        <li><strong>Footprints</strong> - Mobile application for sharing and creating maps.</li>
+        <li><strong>My Art Access</strong> - Web application for the Blanton Museum of Art and UT Texas Austin for describing artwork</li>
       </ul>
     </div>
   </div>
