Update margin on headline

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <div class="row">
     <div class="col-lg-6 col-lg-offset-3">
 
-      <p class="italic">Hello, I'm a UI developer with expertise in JavaScript, functional programming and user experience design.</p>
+      <p class="italic headline">Hello, I'm a UI developer with expertise in JavaScript, functional programming and user experience design.</p>
 
       <h2 id="about-me" class="hr"><span class="hr">ABOUT ME</span></h2>
       <p>I'm originally from "America's comeback city" -- Cleveland, Ohio. I also spent few years in Austin, Texas as well as Chicago, Illinois. Currently, though, I live in Columbus, Ohio with my wife and cat, Sargeant Pepper.</p>
