Add minor updates

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@ layout: default
   <div class="row">
     <div class="col-lg-6 col-lg-offset-3">
 
-      <p class="italic headline">Hello, I'm a UI developer with expertise in JavaScript, functional programming and user experience design.</p>
+      <p class="headline">Hello, I'm a UI developer with expertise in JavaScript, functional programming and user experience design.</p>
 
       <h2 id="about-me" class="hr"><span class="hr">ABOUT ME</span></h2>
-      <p>I'm originally from "America's comeback city" -- Cleveland, Ohio. I also spent few years in Austin, Texas as well as Chicago, Illinois. Currently, though, I live in Columbus, Ohio with my wife and cat, Sargeant Pepper.</p>
+      <p>Originally from "America's comeback city" -- Cleveland, Ohio, I've been fortunate to have spent time living and working in Austin, Texas and Chicago, Illinois. Currently, though, I live in Columbus, Ohio with my wonderful wife and crazy cat, Sgt. Pepper!</p>
 
-      <p>In Columbus, I work for Resource/Ammirati (recently acquired by IBM IX) where we build digital experiences for a wide range of clients. My role is to building and architecting large-scale JavaScript applications for clients like Sherwin-Williams, Huntington Bank, and Nestle. We typically use a full-stack JavaScript architecture with either Backbone, Angular or React depending on the project along with NodeJS. We also have apps that run with Java or .NET back end.</p>
+      <p>In Columbus, I work for <a href="http://resourceammirati.com/">Resource/Ammirati</a> (recently acquired by IBM) where we build digital experiences for a wide range of clients. My role is mainly to build and architect large-scale JavaScript applications for clients like Sherwin-Williams, Huntington Bank, and Nestle. We typically use a full-stack JS architecture with either Angular, Backbone or React depending on the project along with NodeJS. Outside of JS, have plenty of web apps that run with .NET or Java. I also sometimes work on building UIs for native iOS (Obj-C/Swift) applications.</p>
 
-      <p>Prior to Resource, I've worked professionally on a variety of different software projects using languages like Ruby, Java, Perl, and PHP. My passion, though, has always been building and designing the UI side of the applications with JavaScript.</p>
+      <p>Prior to Resource, I've worked professionally on a variety of different software projects using languages like Ruby, Java, Perl, and PHP. My passion, though, has always been building and designing the UI side of the application with JavaScript.</p>
 
-      <p>My approach to work has always been a combination of software craftsmanship, innovation, continuous learning, and sharing. I take pride in delivering high-quality code that is free of bugs by writing unit tests consistently, performing code reviews, and resolving technical debt where necessary. I enjoy learning new programming languages and identifying strengths and weaknesses in solving problems (areas of interest are functional programming, concurrency and static typing).</p>
+      <p>My approach to work has always been a combination of software craftsmanship, innovation, continuous learning, and sharing. I take pride in delivering high-quality code that is free of bugs by writing unit tests consistently, performing code reviews, and resolving technical debt where necessary. I quite enjoy learning new programming languages and identifying strengths and weaknesses in solving problems (areas of interest are functional programming, concurrency and static typing).</p>
 
 
       <h2 id="extras" class="hr"><span class="hr">BLOG</span></h2>
@@ -25,14 +25,20 @@ layout: default
         {% endfor %}
       </p>
       <h2 id="extras" class="hr"><span class="hr">PROJECTS</span></h2>
+      <h4>Professional</h4>
       <ul class="horizontal">
-        <li><strong>Sherwin-Williams Color Visualizer</strong> - Large single page Angular application for exploring and previewing paint colors</li>
+        <li><strong>Sherwin-Williams Color Visualizer (web)</strong> - Large single page Angular application for exploring and previewing paint colors</li>
+        <li><strong>Sherwin-Williams Color Visualizer (iOS)</strong> - Objective-c application for exploring and previewing paint colors</li>
         <li><strong>Everyday Mathematics</strong> - Large Single page Backbone web application for grade-school students learning math</li>
-        <li><strong>GT Universe</strong> - Marketing website for a small Chicago marketing firm.</li>
+        <li><strong>GT Universe</strong> - Marketing website for a small Chicago marketing firm</li>
         <li><strong>Terra Pave</strong> - Website for a company disrupting toxic asphault industry</li>
-        <li><strong>Footprints</strong> - Mobile application for sharing and creating maps.</li>
+        <li><strong>Footprints</strong> - Mobile application for sharing and creating maps</li>
         <li><strong>My Art Access</strong> - Web application for the Blanton Museum of Art and UT Texas Austin for describing artwork</li>
       </ul>
+      <br />
+      <h4>Open Source / Personal</h4>
+      <p>See my <a href="https://github.com/nimi">github</a> for the most up to date projects.</p>
+      <br />
     </div>
   </div>
 </div>
