Update about page

--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@ layout: default
       <p class="headline">Hello, I'm a UI developer with expertise in JavaScript, functional programming and user experience design.</p>
 
       <h2 id="about-me" class="hr"><span class="hr">ABOUT ME</span></h2>
-      <p>Originally from "America's comeback city" -- Cleveland, Ohio, I've been fortunate to have spent time living and working in Austin, Texas and Chicago, Illinois. Currently, though, I live in Columbus, Ohio with my wonderful wife and crazy cat, Sgt. Pepper!</p>
+      <p>Originally from "America's comeback city" -- Cleveland, Ohio, I've been fortunate to have spent time living and working in Columbus, Ohio and Chicago, Illinois. Currently, though, I live in Austin, Texas with my wonderful wife, beautiful baby girl Ramona and one crazy cat, Sgt. Pepper!</p>
 
-      <p>In Columbus, I work for <a href="http://resourceammirati.com/">Resource/Ammirati</a> (recently acquired by IBM) where we build digital experiences for a wide range of clients. My role is mainly to build and architect large-scale JavaScript applications for clients like Sherwin-Williams, Huntington Bank, and Nestle. We typically use a full-stack JS architecture with either Angular, Backbone or React depending on the project along with NodeJS. Outside of JS, have plenty of web apps that run with .NET or Java. I also sometimes work on building UIs for native iOS (Obj-C/Swift) applications.</p>
+      <p>
+        In Austin, I work for <a href="https://sailpoint.com/">SailPoint</a>. At SailPoint, we ship SaaS applications in the Identity Governance space. My
+        role is largely focused on the UI, but I frequently work across the stack and across departments (UX, Data, Backend, etc) to solve critical problems and add important features for customers
+        and internal teams. On the UI end I've architected and delivered applications written in most modern JS frameworks. Most recently, I have built apps with React, Next.js, Node.js, Angular 2+ using both
+        TypeScript and JavaScript.
+      </p>
+      
+      <p>Prior to SailPoint, I've worked professionally on a variety of different software projects using languages like Ruby, Java, Perl, Clojure, Objective-C, Swift, among others. My passion, though, has always been building UI and solving UX problems of all kinds.</p>
 
-      <p>Prior to Resource, I've worked professionally on a variety of different software projects using languages like Ruby, Java, Perl, and PHP. My passion, though, has always been building and designing the UI side of the application with JavaScript.</p>
-
-      <p>My approach to work has always been a combination of software craftsmanship, innovation, continuous learning, and sharing. I take pride in delivering high-quality code that is free of bugs by writing unit tests consistently, performing code reviews, and resolving technical debt where necessary. I quite enjoy learning new programming languages and identifying strengths and weaknesses in solving problems (areas of interest are functional programming, concurrency and static typing).</p>
+      <p>My approach to work has always been a combination of software craftsmanship, innovation, continuous learning, and sharing. I take pride in delivering high-quality code that is free of bugs by writing unit tests consistently, performing code reviews, and resolving technical debt where necessary. I quite enjoy learning new programming languages and identifying strengths and weaknesses in solving problems (areas of ongoing interest are functional programming, concurrency and static typing).</p>
 
 
       <h2 id="extras" class="hr"><span class="hr">BLOG</span></h2>
@@ -27,7 +32,9 @@ layout: default
       <h2 id="extras" class="hr"><span class="hr">PROJECTS</span></h2>
       <h4>Professional</h4>
       <ul class="horizontal">
-        <li><strong>Sherwin-Williams Color Visualizer (web)</strong> - Large single page Angular application for exploring and previewing paint colors</li>
+        <li><strong>IdentityAI (web)</strong> - Large Angular/React applications that take Identity Governance data and uses ML and Data Science to provide insight and automation</li>
+        <li><strong>IdentityNow (web)</strong> - SaaS Single Page apps that provide business customers with Identity Governance tools and workflow management</li>
+        <li><strong>Sherwin-Williams Color Visualizer (web)</strong> - Large single page AngularJS application for exploring and previewing paint colors</li>
         <li><strong>Sherwin-Williams Color Visualizer (iOS)</strong> - Objective-c application for exploring and previewing paint colors</li>
         <li><strong>Everyday Mathematics</strong> - Large Single page Backbone web application for grade-school students learning math</li>
         <li><strong>GT Universe</strong> - Marketing website for a small Chicago marketing firm</li>
